Fix project tabs z-index
Closes #160

--- a/src/sass/projects.sass
+++ b/src/sass/projects.sass
@@ -100,7 +100,6 @@
   top: 0
   left: 0
   right: 0
-  z-index: 1000
   width: 100%
   min-height: 30px
   text-align: center
